Create header div

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header"></div>
     <div class="cardContainer">
-        
     </div>
 </body>
 </html>
