--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <button id="addNewBook">Add Book</button>
+    </div>
     <div class="cardContainer">
     </div>
 </body>
