--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <body>
     <div class="header">
         <button id="addNewBook">Add Book</button>
+        <div class="form-popup" id="bookForm">
+            <form class="bookForm-container">
+                <label for="title">Title</label>
+                <input type="text" id="title" placeholder="The Hobbit" name="title">
+                <label for="author">Author</label>
+                <input type="text" id="author" placeholder="J. R. R. Tolkien" name="author">
+                <label for="pages">Pages</label>
+                <input type="number" id="pages" placeholder="310" name="pages">
+            </form>
+        </div>
     </div>
     <div class="cardContainer">
     </div>
