--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 <body>
     <div class="header">
-        <button id="addNewBook">Add Book</button>
+        <button id="addNewBook" onclick="openForm()">Add Book</button>
         <div class="form-popup" id="bookForm">
             <form class="bookForm-container">
                 <label for="title">Title</label>
                 <input type="text" id="title" placeholder="The Hobbit" name="title">
+
                 <label for="author">Author</label>
                 <input type="text" id="author" placeholder="J. R. R. Tolkien" name="author">
+
                 <label for="pages">Pages</label>
                 <input type="number" id="pages" placeholder="310" name="pages">
+
+                <button type="button" class="cancelButton" onclick="closeForm()">Cancel</button>
             </form>
         </div>
     </div>
