--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <button id="addNewBook" onclick="openForm()">Add Book</button>
         <div class="form-popup" id="bookForm">
-            <form class="bookForm-container">
+            <form id="bookForm-container">
                 <label for="title">Title</label>
                 <input type="text" id="title" placeholder="The Hobbit" name="title">
 
@@ -22,7 +22,7 @@
                 <label for="pages">Pages</label>
                 <input type="number" id="pages" placeholder="310" name="pages">
 
-                <button type="button" class="cancelButton" onclick="closeForm()">Cancel</button>
+                <button type="button" id="cancelButton" onclick="closeForm()">Cancel</button>
             </form>
         </div>
     </div>
