Add submit button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
                 <label for="pages">Pages</label>
                 <input type="number" id="pages" placeholder="310" name="pages">
 
-                <button type="button" id="cancelButton" onclick="closeForm()">Cancel</button>
+                <div id="submitCancelButtons">
+                    <button type="submit" id="submitBook">Submit</button>
+                    <button type="button" id="cancelButton" onclick="closeForm()">Cancel</button>
+                </div>
+
             </form>
         </div>
     </div>
